# syspro-parallel-programming

hw/block1/1.1/: Case1.java  Case2.java  Case3.java  explanation.md
hw/block1/1.2/: solution.md
hw/block1/1.3/: solution.md
hw/block1/1.4/: solution.md
hw/block1/1.6/: Deadlock1.java  Deadlock2.java  d1.out  d2.out  explanation.md  runJstask.sh
hw/block1/2.3/locks/: pom.xml
hw/block1/2.4/: .gitignore  Async.hs  Plot.hs  c2coutput  jmh-result.csv  justfile  perf.data  plot.cabal  pom.xml  solution.tex
hw/block1/2.4/src/main/java/org/nsu/syspro/parprog/counters/benches/: CountersBenchmark.java  NoContentionBaseline.java
hw/block1/2.4/src/main/java/org/nsu/syspro/parprog/counters/impls/: Counter.java  LockedCounter.java  SplitCounter.java  ThreadUnsafeCounter.java
hw/block1/2.4/src/test/java/org/nsu/syspro/parprog/counters/: SplitCounterTest.java
hw/block1/3.1/solution/: answers.md  pom.xml
hw/block1/3.1/solution/src/main/java/org/nsu/syspro/parprog/: JoinFuture.java  ThreadPerTaskExecutorService.java
hw/block1/3.1/solution/src/test/java/org/nsu/syspro/parprog/: ThreadPerTaskExecutionServiceTest.java
hw/block1/3.3/solution/: justfile  pom.xml
hw/block1/3.3/solution/src/main/java/org/nsu/syspro/parprog/: CondVarFuture.java  SingleThreadExecutorService.java  SupervisedWorker.java  Task.java
hw/block1/3.3/solution/src/test/java/org/nsu/syspro/parprog/: SingleThreadExecutionServiceTest.java  TestThreadFactory.java  ThreadId.java  ThreadIdTest.java
hw/block1/4.2/solution/: pom.xml
(+11 files in other folders)
